--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="header_wrapper">
                 <div class="header_logo">
                     <a href="/" class="header_logo-link">
-                        <img src="/img/svg/odigo-logo.png" alt="Discover Amazing places in Japan" class="header_logo-pic">
+                        <img src="/img/svg/odigo-logo1.png" alt="Discover Amazing places in Japan" class="header_logo-pic">
                     </a>
                 </div>
 
