--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="wrapper">
             <div class="header_wrapper">
                 <div class="header_logo">
-                    <a href="/" class="header_logo-link">
+                    <a href="#" class="header_logo-link">
                         <img src="img/svg/logo.svg" alt="Discover Amazing places in Japan" class="header_logo-pic">
                     </a>
                 </div>
