--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav class="header_nav">
                     <ul class="header_list">
                         <li class="header_item">
-                            <a href="#!" class="header_link">rticles</a>
+                            <a href="#!" class="header_link">Articles</a>
                         </li>
                         <li class="header_item">
                             <a href="#!" class="header_link">Locations</a>
