--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <form class="search-form">
                     <fieldset class="searh-form__wrap">
                         <p class="search-form__info">
-                            <input type="text" name="user-like-to-do" class="searck-form__field" placeholder="What would you like to do?">
-                            <input type="text" name="user-like-to-go" class="searck-form__field" placeholder="Where would you like to go?">
+                            <input type="text" name="user-like-to-do" class="search-form__field" placeholder="What would you like to do?">
+                            <input type="text" name="user-like-to-go" class="search-form__field" placeholder="Where would you like to go?">
                             <button type="submit" class="search-form__submit">search</button>
                         </p>
                     </fieldset>
