--- a/index.html
+++ b/index.html
@@ -118,6 +118,30 @@
             </div>
         </section>
         <!-- Benefits end -->
+
+        <!-- Places start -->
+        <section class="places">
+            <div class="wrapper-full">
+                <div class="places__caption">
+                    <h2 class="places__title section-title">
+                        Get inspired for your next trip
+                    </h2>
+                    <a href="#!" class="places__view-all">VIEW ALL</a>
+                </div>
+                <div class="places__cards">
+                    <figure class="places__card places__card-size_lg">
+                        <img src="./img/place-1.jpg" alt="Mount Fuji" class="places__card-pic">
+                        <figcaption class="places__card-title">Mount Fuji</figcaption>
+                    </figure>
+                    <figure class="places__card places__card-size_lg">
+                        <img src="./img/place-2.jpg" alt="Kyoto" class="places__card-pic">
+                        <figcaption class="places__card-title">Kyoto</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <!-- Places end -->
+
     </main>
     
 </body>
