--- a/index.html
+++ b/index.html
@@ -350,13 +350,12 @@
                 </div>
             </div>
         </section>    
-
-
-
-
-
-
         <!-- Top end -->
+
+        <!-- start -->
+
+        <!-- end -->
     </main>
+    <script src="./js/main.js"></script>
 </body>
 </html>
