--- a/index.html
+++ b/index.html
@@ -352,9 +352,14 @@
         </section>    
         <!-- Top end -->
 
-        <!-- start -->
-
-        <!-- end -->
+        <!-- Videos start -->
+        <div class="vedeos">
+            <div class="videos__wrapper">
+                <div class="video__item"></div>
+                <iframe class="video__element" src="https://www.youtube.com/embed/00ZXaXIABMY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
+            </div>
+        </div>
+        <!-- Videos end -->
     </main>
     <script src="./js/main.js"></script>
 </body>
