--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Amazing places in Japan</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
     <!-- Header start -->
     <header class="header">
         <div class="wrapper">
-            <div class="header_wrapper">
-                <div class="header_logo">
+            <div class="header__wrapper">
+                <div class="header__logo">
                     <a href="#" class="header_logo-link">
-                        <img src="img/svg/logo.svg" alt="Discover Amazing places in Japan" class="header_logo-pic">
+                        <img src="img/svg/logo.svg" alt="Discover Amazing places in Japan" class="header__logo-pic">
                     </a>
                 </div>
 
-                <nav class="header_nav">
-                    <ul class="header_list">
-                        <li class="header_item">
-                            <a href="#!" class="header_link">Articles</a>
+                <nav class="header__nav">
+                    <ul class="header__list">
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Articles</a>
                         </li>
-                        <li class="header_item">
-                            <a href="#!" class="header_link">Locations</a>
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Locations</a>
                         </li>
-                        <li class="header_item">
-                            <a href="#!" class="header_link">Videos</a>
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Videos</a>
                         </li>
-                        <li class="header_item">
-                            <a href="#!" class="header_link">Sign in</a>
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Sign in</a>
                         </li>
                     </ul>
                 </nav>
@@ -386,7 +383,6 @@
                             <a href="#!" class="footer__menu-link">Privacy Policy</a>
                         </li>
                     </ul>
-
                     <ul class="footer__menu">
                         <li class="footer__menu-item">
                             <h3 class="footer__menu-title">Locations</h3>
@@ -421,7 +417,6 @@
                             <a href="#!" class="footer__menu-link">Youtube</a>
                         </li>
                     </ul>
-
                 </nav>
             </div>
         </div>
