Adaptive Tablet added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Amazing places in Japan</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <!-- Header start -->
     <header class="header">
@@ -39,7 +40,7 @@
                     </div>
                 </nav>
                 <div class="header__burger burger">
-                    <span class="burger__line burger__line_first" ></span>
+                    <span class="burger__line burger__line_first"></span>
                     <span class="burger__line burger__line_second"></span>
                     <span class="burger__line burger__line_third"></span>
                 </div>
@@ -57,13 +58,17 @@
                     Discover Amazing places in Japan
                 </h1>
                 <p class="intro__subtitle">
-                    Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door
+                    Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being
+                    gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack
+                    the child, open the door
                 </p>
                 <form class="search-form">
                     <fieldset class="searh-form__wrap">
                         <p class="search-form__info">
-                            <input type="text" name="user-like-to-do" class="search-form__field" placeholder="What would you like to do?">
-                            <input type="text" name="user-like-to-go" class="search-form__field" placeholder="Where would you like to go?">
+                            <input type="text" name="user-like-to-do" class="search-form__field"
+                                placeholder="What would you like to do?">
+                            <input type="text" name="user-like-to-go" class="search-form__field"
+                                placeholder="Where would you like to go?">
                             <button type="submit" class="search-form__submit">search</button>
                         </p>
                     </fieldset>
@@ -95,7 +100,8 @@
                     </div>
                     <div class="benefits__card">
                         <div class="benefits__card-pic">
-                            <img src="./img/svg/person-icon.svg" alt="Your Personal Japan Guide" class="benefits__card-thumb">
+                            <img src="./img/svg/person-icon.svg" alt="Your Personal Japan Guide"
+                                class="benefits__card-thumb">
                         </div>
                         <h3 class="benefits__card-title">
                             Your Personal Japan Guide
@@ -109,7 +115,8 @@
                     </div>
                     <div class="benefits__card">
                         <div class="benefits__card-pic">
-                            <img src="./img/svg/church-icon.svg" alt="Promoting Local Businesses" class="benefits__card-thumb">
+                            <img src="./img/svg/church-icon.svg" alt="Promoting Local Businesses"
+                                class="benefits__card-thumb">
                         </div>
                         <h3 class="benefits__card-title">
                             Promoting Local Businesses
@@ -180,7 +187,9 @@
                             Prefecture in Focus: Tottori
                         </h3>
                         <p class="tour__desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this if i had the energy but under the bed,
+                            for attack the child, open the door
                         </p>
                         <a href="#!" class="tour__more">VIEW PREFECTURE</a>
                     </div>
@@ -191,7 +200,9 @@
                             Featured Neighborhood: Kyoto’s Arashiyama
                         </h3>
                         <p class="tour__desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this if i had the energy but under the bed,
+                            for attack the child, open the door
                         </p>
                         <a href="#!" class="tour__more">VIEW NEIGHBORHOOD</a>
                     </div>
@@ -230,8 +241,9 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                         </p> 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
+                        </p>
                         <a href="#!" class="top__card-more">SEE MORE</a>
                     </div>
                     <div class="top__card">
@@ -254,8 +266,9 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                        </p> 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
+                        </p>
                         <a href="#!" class="top__card-more">SEE MORE</a>
                     </div>
                     <div class="top__card">
@@ -278,8 +291,9 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                        </p> 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
+                        </p>
                         <a href="#!" class="top__card-more">SEE MORE</a>
                     </div>
                     <div class="top__card">
@@ -302,8 +316,9 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                        </p> 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
+                        </p>
                         <a href="#!" class="top__card-more">SEE MORE</a>
                     </div>
                     <div class="top__card">
@@ -326,8 +341,9 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                        </p> 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
+                        </p>
                         <a href="#!" class="top__card-more">SEE MORE</a>
                     </div>
                     <div class="top__card">
@@ -350,20 +366,24 @@
                             </div>
                         </div>
                         <p class="top__card-desc">
-                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this.
-                        </p> 
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                            Being gorgeous with belly side up i could pee on this.
+                        </p>
                         <a href="#!" class="top__card-more">SEE MORE</a>
                     </div>
                 </div>
             </div>
-        </section>    
+        </section>
         <!-- Top end -->
 
         <!-- Videos start -->
         <div class="vedeos">
             <div class="videos__wrapper">
                 <div class="video__item"></div>
-                <iframe class="video__element" src="https://www.youtube.com/embed/00ZXaXIABMY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
+                <iframe class="video__element" src="https://www.youtube.com/embed/00ZXaXIABMY"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
         </div>
         <!-- Videos end -->
@@ -373,7 +393,8 @@
         <div class="wrapper">
             <div class="footer__item">
                 <div class="footer__logo">
-                    <img src="./img/svg/odigo-logo-footer.svg" alt="Discover Amazing places in Japan" class="footer__logo-pic">
+                    <img src="./img/svg/odigo-logo-footer.svg" alt="Discover Amazing places in Japan"
+                        class="footer__logo-pic">
                 </div>
                 <nav class="footer__nav">
                     <ul class="footer__menu">
@@ -434,4 +455,5 @@
 
     <script src="./js/main.js"></script>
 </body>
+
 </html>
