Adaptive mobile test

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <!-- Top end -->
 
         <!-- Videos start -->
-        <div class="vedeos">
+        <div class="videos">
             <div class="videos__wrapper">
                 <div class="video__item"></div>
                 <iframe class="video__element" src="https://www.youtube.com/embed/00ZXaXIABMY"
