--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__item">
-                            <a href="#!" class="header__link">Articles</a>
+                            <a href="#articles" class="header__link js-scroll">Articles</a>
                         </li>
                         <li class="header__item">
-                            <a href="#!" class="header__link">Locations</a>
+                            <a href="#locations" class="header__link js-scroll">Locations</a>
                         </li>
                         <li class="header__item">
-                            <a href="#!" class="header__link">Videos</a>
+                            <a href="#videos" class="header__link js-scroll">Videos</a>
                         </li>
                         <li class="header__item">
-                            <a href="#!" class="header__link">Sign in</a>
+                            <a href="#sign-in" class="header__link js-scroll">Sign in</a>
                         </li>
                     </ul>
                     <div class="header__nav-close">
@@ -52,7 +52,7 @@
 
     <main class="main">
         <!-- Intro start -->
-        <section class="intro">
+        <section class="intro" id="sign-in">
             <div class="wrapper">
                 <h1 class="intro__title">
                     Discover Amazing places in Japan
@@ -176,7 +176,7 @@
         <!-- Places end -->
 
         <!-- Tours start -->
-        <div class="tours">
+        <div class="tours" id="articles">
             <div class="wrapper-full">
                 <div class="tours__tour tour">
                     <div class="tour__pic">
@@ -215,7 +215,7 @@
         <!-- Tours end -->
 
         <!-- Top start -->
-        <section class="top">
+        <section class="top" id="locations">
             <div class="wrapper-full">
                 <h2 class="top__title section-title">
                     Today top places to visit
@@ -377,7 +377,7 @@
         <!-- Top end -->
 
         <!-- Videos start -->
-        <div class="videos">
+        <div class="videos" id="videos">
             <div class="videos__wrapper">
                 <div class="video__item"></div>
                 <iframe class="video__element" src="https://www.youtube.com/embed/00ZXaXIABMY"
