--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <main class="main">
         <!-- Intro start -->
-        <section class="intro" id="sign-in">
+        <div class="intro" id="sign-in">
             <div class="wrapper">
                 <h1 class="intro__title">
                     Discover Amazing places in Japan
@@ -74,7 +74,7 @@
                     </fieldset>
                 </form>
             </div>
-        </section>
+        </div>
         <!-- Intro end -->
 
         <!-- Benefits start -->
@@ -453,7 +453,7 @@
         </div>
     </footer>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/main-es5.min.js"></script>
 </body>
 
 </html>
